// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`дилера отправит в кабинет 1`] = `
DescriptError {
  "error": Object {
    "code": "LK_MAIN_TO_CATEGORY",
    "id": "REDIRECTED",
    "location": "https://cabinet.autoru_frontend.base_domain/",
    "status_code": 302,
  },
}
`;

exports[`клиента у которого есть объявления и по запчастям, и по транспорту - отправит в категорию all 1`] = `
DescriptError {
  "error": Object {
    "code": "LK_MAIN_TO_CATEGORY",
    "id": "REDIRECTED",
    "location": "/my/all/",
    "status_code": 302,
  },
}
`;

exports[`обычного частника отправит в категорию all 1`] = `
DescriptError {
  "error": Object {
    "code": "LK_MAIN_TO_CATEGORY",
    "id": "REDIRECTED",
    "location": "/my/all/",
    "status_code": 302,
  },
}
`;
